fhir/10.0.0/POST_migrate.md
# POST Migrate - eHealth Infrastructure v10.0.0

* [**Table of Contents**](toc.md)
* **POST Migrate**

## POST Migrate

`POST [base]/$migrate`

**Request Headers**

```
Authorization: Bearer eyJhbGciOiJub25lIn0.eyJyZWFsbV9hY2Nlc3MiOnsicm9sZXMiOlsiUXVlc3Rpb25uYWlyZS5zZWFyY2giLCJRdWVzdGlvbm5haXJlLnJlYWQiLCJRdWVzdGlvbm5haXJlLmNyZWF0ZSIsIiRtaWdyYXRlIiwiQWN0aW9uR3VpZGFuY2UucmVhZCIsIiR0ZXN0LW9ubHktY3JlYXRlIl19LCJ1c2VyX3R5cGUiOiJTWVNURU0ifQ.
Accept: application/fhir+json;q=1.0, application/json+fhir;q=0.9
User-Agent: HAPI-FHIR/8.6.5 (FHIR Client; FHIR 4.0.1/R4; apache)
Accept-Encoding: gzip
Content-Type: application/fhir+json; charset=UTF-8

```

**Body**:

```
{
  "resourceType": "Parameters",
  "parameter": [
    {
      "name": "migrationId",
      "valueString": "MigrateBloodPressureCodesQuestionnaire"
    }
  ]
}

```

**Response Headers**

```
date: Thu, 16 Apr 2026 11:49:44 GMT
x-request-id: c693edca-2783-48e1-b290-2a5e2049fc50
server: istio-envoy
x-envoy-upstream-service-time: 288
expires: 0
x-content-type-options: nosniff
x-xss-protection: 0
x-b3-traceid: 716a140f7d3f8eae74c01fb2b7306043
x-frame-options: DENY
x-powered-by: HAPI FHIR 8.6.5 REST Server (FHIR Server; FHIR 4.0.1/R4)
content-type: application/fhir+json; charset=UTF-8
cache-control: no-cache, no-store, max-age=0, must-revalidate
pragma: no-cache

```

**Response**

```
{
  "resourceType": "OperationOutcome",
  "text": {
    "status": "generated",
    "div": "<div xmlns=\"http://www.w3.org/1999/xhtml\"><h1>Operation Outcome</h1><table border=\"0\"><tr><td style=\"font-weight: bold;\">INFORMATION</td><td>[]</td><td>No issues detected during validation</td></tr></table></div>"
  },
  "issue": [
    {
      "severity": "information",
      "code": "informational",
      "diagnostics": "No issues detected during validation"
    }
  ]
}

```

